fix style and remove force jumping

--- a/client/src/sass/components/_section.scss
+++ b/client/src/sass/components/_section.scss
@@ -1,6 +1,6 @@
 .section {
   //   margin-bottom: 80px;
-  margin: 2rem 2rem 0;
+  margin: 2rem 2rem;
 
   & > * ~ * {
     margin-top: 70px;
